Añadir nota aclaratoria sobre limitaciones del cálculo de ROI

--- a/index.html
+++ b/index.html
@@ -831,9 +831,12 @@
                 <div class="conclusion-item">
                     <div class="conclusion-number">04</div>
                     <div class="conclusion-text">
-                        <strong>ROI demostrado:</strong> Más leads, más rápido = impacto directo en el pipeline comercial.
+                        <strong>ROI demostrado*:</strong> Más leads, más rápido = impacto directo en el pipeline comercial.
                     </div>
                 </div>
+            </div>
+            <div class="roi-disclaimer" style="margin-top: 1.5rem; padding: 1rem; background: rgba(212, 175, 55, 0.08); border: 1px solid rgba(212, 175, 55, 0.2); border-radius: 8px; font-size: 0.85rem; color: var(--text-secondary);">
+                <strong style="color: var(--accent-gold);">*Nota sobre ROI:</strong> El retorno de inversión exacto no puede calcularse con precisión dado que la información de ventas cerradas no está disponible en el CRM actual. Los datos presentados reflejan el impacto en generación de leads y eficiencia operativa.
             </div>
         </div>
 
