Add critical note highlighting low sales conversion rate (0.38%) in commitments section

--- a/index.html
+++ b/index.html
@@ -1382,6 +1382,9 @@
                         <div class="commitment-result">
                             <strong>Resultado:</strong> En enero se vendieron solo 3 clientes.
                         </div>
+                        <div style="margin-top: 0.75rem; padding: 0.75rem; background: rgba(244, 63, 94, 0.1); border-left: 3px solid var(--accent-rose); border-radius: 6px; font-size: 0.85rem;">
+                            <strong style="color: var(--accent-rose);">Nota:</strong> <span style="color: var(--text-secondary);">De 799 leads generados, solo 3 ventas representa una conversión del 0.38%. Este volumen plantea interrogantes sobre la eficacia del proceso comercial actual.</span>
+                        </div>
                     </div>
 
                     <div class="commitment-item">
