Update conclusions wording and add pending commitment for product catalog sharing

--- a/index.html
+++ b/index.html
@@ -1431,6 +1431,19 @@
                             Explorar posibilidad de aumentar presupuesto de pauta y mejorar targeting.
                         </div>
                     </div>
+
+                    <div class="commitment-item">
+                        <div class="commitment-header">
+                            <div class="commitment-owner">Sr. Insignia (General)</div>
+                            <div class="commitment-status pending">Pendiente</div>
+                        </div>
+                        <div class="commitment-text">
+                            Enviar catálogo de productos mediante link de Google Drive por el grupo.
+                        </div>
+                        <div class="commitment-result">
+                            <strong>Estado:</strong> Acordado pero aún no enviado.
+                        </div>
+                    </div>
                 </div>
             </details>
 
@@ -1441,7 +1454,7 @@
                     <div class="conclusion-item">
                         <div class="conclusion-number">01</div>
                         <div class="conclusion-text">
-                            <strong>Impacto de la desactivación del bot:</strong> Las métricas de enero confirman que desactivar el bot causó una caída del 70% en mensajes y 57% en leads, además de aumentar el tiempo de respuesta 13.3x (de 18s a 4 min).
+                            <strong>Caída drástica en volumen:</strong> Las métricas de enero muestran una caída del 70% en mensajes y 57% en leads. El tiempo de respuesta aumentó 13.3x (de 18s a 4 min), sugiriendo que el bot fue desactivado en múltiples ocasiones durante el mes.
                         </div>
                     </div>
                     <div class="conclusion-item">
