Clarify that leads come from advertising campaigns, not delivered by bot

--- a/index.html
+++ b/index.html
@@ -1311,13 +1311,13 @@
                     <div class="conclusion-item" style="border-left-color: var(--accent-rose);">
                         <div class="conclusion-number" style="color: var(--accent-rose);">03</div>
                         <div class="conclusion-text">
-                            <strong>Responsabilidad post-bot:</strong> El bot automatiza exitosamente las etapas de Diagnóstico/Prospección hasta entregar leads cualificados en Cotización. A partir de ese punto, el cierre depende enteramente del equipo comercial.
+                            <strong>Responsabilidad post-bot:</strong> El bot automatiza exitosamente la atención inicial y cualificación de leads en las etapas de Diagnóstico/Prospección hasta Cotización. A partir de ese punto, el cierre depende enteramente del equipo comercial.
                         </div>
                     </div>
                     <div class="conclusion-item" style="border-left-color: var(--accent-rose);">
                         <div class="conclusion-number" style="color: var(--accent-rose);">04</div>
                         <div class="conclusion-text">
-                            <strong>Posibles causas de bajo cierre:</strong> ¿La calidad de los leads entregados por el bot es inadecuada? ¿El proceso de seguimiento comercial presenta deficiencias? ¿Los tiempos de respuesta o la propuesta de valor no son competitivos? Es fundamental diagnosticar la causa raíz.
+                            <strong>Posibles causas de bajo cierre:</strong> ¿La calidad de los leads generados por la pauta es inadecuada? ¿El proceso de seguimiento comercial presenta deficiencias? ¿Los tiempos de respuesta o la propuesta de valor no son competitivos? Es fundamental diagnosticar la causa raíz.
                         </div>
                     </div>
                 </div>
