Add bot deactivation metrics: 20% in December vs 60% in January

--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
                     <div class="kpi-label">Tiempo de Respuesta</div>
                     <div class="kpi-value">~4 min</div>
                     <div class="kpi-change negative">+1,233% vs Dic</div>
-                    <div class="kpi-context">Volvió a niveles pre-bot</div>
+                    <div class="kpi-context">Bot desactivado +60% del tiempo</div>
                 </div>
             </div>
 
@@ -1097,12 +1097,16 @@
                 </div>
                 <div style="padding: 1.5rem;">
                     <p style="font-size: 1rem; color: var(--text-primary); margin-bottom: 1rem;">
-                        <strong>El bot ha sido desactivado en más del 60% de los casos durante enero.</strong>
+                        <strong>El bot ha sido desactivado en más del 60% del tiempo durante enero</strong> (vs +20% en diciembre).
                     </p>
                     <p style="font-size: 0.95rem; color: var(--text-secondary); line-height: 1.6;">
-                        Esto explica directamente la caída en métricas: menor volumen de mensajes procesados, menos leads generados, 
-                        y el tiempo de respuesta volvió a los 4 minutos (desde los 18 segundos que teníamos en diciembre con el bot activo).
+                        Este incremento en las desactivaciones explica directamente la caída en métricas: menor volumen de mensajes procesados, menos leads generados, 
+                        y el tiempo de respuesta volvió a los 4 minutos (desde los 18 segundos que teníamos con el bot activo).
                     </p>
+                    <div style="margin-top: 1rem; padding: 0.75rem; background: var(--bg-card); border-left: 3px solid var(--accent-rose); border-radius: 6px; font-size: 0.85rem;">
+                        <strong style="color: var(--accent-rose);">Evolución de desactivaciones:</strong>
+                        <span style="color: var(--text-secondary);"> Diciembre: ~20% del tiempo • Enero: +60% del tiempo (triplicó las desactivaciones)</span>
+                    </div>
                 </div>
             </div>
 
